# frankenpandas

./: .gitignore  .skill-loop-progress.md  AGENTS.md  CHANGELOG.md  COMPREHENSIVE_SPEC_FOR_FRANKENPANDAS_V1.md  CONTRIBUTING.md  COVERAGE_MATRIX.md  Cargo.toml  DIFFERENTIAL_FUZZ_DESIGN.md  EXHAUSTIVE_LEGACY_ANALYSIS.md  EXISTING_PANDAS_STRUCTURE.md  FEATURE_PARITY.md  PHASE2C_EXTRACTION_PACKET.md  PLAN_TO_PORT_PANDAS_TO_RUST.md  PROPOSED_ARCHITECTURE.md  README.md  TODO_EXECUTION_TRACKER.md  UPGRADE_LOG.md  deny.toml  rust-toolchain.toml
crates/fp-bench/: Cargo.toml
crates/fp-bench/src/: main.rs
crates/fp-columnar/: Cargo.toml
crates/fp-columnar/examples/: bench_absneg.rs  bench_add.rs  bench_add_f64_null.rs  bench_aligned_f64_positions.rs  bench_argmin_typed.rs  bench_argsort_utf8.rs  bench_astype.rs  bench_astype_str.rs  bench_atan2.rs  bench_between.rs  bench_binary_ufuncs.rs  bench_clip.rs  bench_cmp_f64.rs  bench_cmpwhere.rs  bench_cum_i64.rs  bench_cummax_null.rs  bench_diff.rs  bench_div.rs  bench_dropna.rs  bench_dup_ndistinct_fix.rs  bench_elementwise2.rs  bench_emax.rs  bench_factorize_wide_fix.rs  bench_fdiv.rs  bench_ffill.rs  bench_fillna.rs  bench_fillna_temporal.rs  bench_filter.rs  bench_filter_null.rs  bench_floor_ceil.rs  bench_fmax_null.rs  bench_gcd_null.rs  bench_hashops.rs  bench_heaviside_null.rs  bench_hist_counts.rs  bench_histogram.rs  bench_hypot_null.rs  bench_i64ops.rs  bench_imod.rs  bench_interp.rs  (+56 more)
crates/fp-columnar/src/: lib.rs
crates/fp-conformance/: COVERAGE.md  Cargo.toml  DISCREPANCIES.md  TESTING_CONVENTION.md
crates/fp-conformance/benches/: vs_pandas.rs
crates/fp-conformance/examples/: bench_csv_write.rs  bench_runner.rs  gap_hunt.rs  perf_profile.rs
crates/fp-conformance/fixtures/: README.md  perf_budgets.json  smoke_case.json
crates/fp-conformance/oracle/: LIVE_VS_REPLAY_AUDIT.md  fixture_differ.py  generate_scale_fixtures.py  pandas_oracle.py  reverse_oracle.py
crates/fp-conformance/src/: lib.rs
crates/fp-conformance/tests/: ag_e2e.rs  e2e_workflow.rs  groupby_value_mr.rs  perf_baselines.rs  proptest_properties.rs  reverse_conformance.rs  scale_conformance.rs  smoke.rs
crates/fp-expr/: Cargo.toml
crates/fp-expr/src/: lib.rs
crates/fp-frame/: Cargo.toml  UBS_TRIAGE.md
crates/fp-frame/examples/: addfill_verify.rs  affine_verify.rs  bench_abs.rs  bench_addscalar.rs  bench_addscalar_i64null.rs  bench_aggm_bt.rs  bench_axis0n.rs  bench_axis1n.rs  bench_between_bt.rs  bench_binop_cc.rs  bench_boolreindex.rs  bench_booltake.rs  bench_cidx_bt.rs  bench_cmix_bt.rs  bench_cmpscalar_f64null.rs  bench_cmpscalar_i64null.rs  bench_combfirst.rs  bench_combine_cc.rs  bench_concat.rs  bench_concat_bt.rs  bench_concat_mimalloc.rs  bench_contains_any.rs  bench_corr_null.rs  bench_corrwith.rs  bench_creduce_bt.rs  bench_crosstab_cc.rs  bench_cumnull_bt.rs  bench_cut_i64.rs  bench_cw.rs  bench_dedup2.rs  bench_dedup_dtsubset.rs  bench_df.rs  bench_df_ee.rs  bench_df_idx.rs  bench_df_iloc_gather.rs  bench_df_isin.rs  bench_df_loc.rs  bench_df_roll.rs  bench_df_vc.rs  bench_dfarith.rs  (+303 more)
crates/fp-frame/src/: lib.rs
crates/fp-frame/tests/: concat_typed_conformance.rs  corr_typed_conformance.rs  describe_typed_conformance.rs  df_value_counts_dense_conformance.rs  duplicated_multicol_typed_conformance.rs  ewm_var_typed_conformance.rs  fxhash_dedup_conformance.rs  gb_agglist_str_conformance.rs  gb_count_dense_conformance.rs  gb_dtkey_conformance.rs  gb_first_last_multikey_conformance.rs  gb_first_last_utf8_dense_conformance.rs  gb_nunique_str_dense_conformance.rs  gb_shift_diff_bykey_conformance.rs  gb_transform_str_conformance.rs  gb_value_counts_span_conformance.rs  groupby_fxhash_conformance.rs  groupby_multi_utf8_dense_conformance.rs  groupby_nullable_dense_conformance.rs  index_typed_conformance.rs  isocalendar_typed_conformance.rs  reductions_typed_conformance.rs  resample_week_numeric_conformance.rs  rolling_moment_typed_conformance.rs  series_dt_dedup_conformance.rs  series_nullable_reduction_conformance.rs  series_td_dedup_conformance.rs  sgb_nunique_str_dense_conformance.rs  sgb_utf8_extreme_dense_conformance.rs  shift_typed_conformance.rs  slice_typed_conformance.rs  str_capitalize_title_typed_conformance.rs  str_is_predicates_typed_conformance.rs  str_pad_zfill_typed_conformance.rs  str_removeprefix_suffix_typed_conformance.rs  str_replace_repeat_typed_conformance.rs  td_loc_conformance.rs  to_period_numeric_conformance.rs
crates/fp-frankentui/: Cargo.toml
crates/fp-frankentui/src/: lib.rs
crates/fp-groupby/: Cargo.toml
crates/fp-groupby/examples/: bench_groupby_median.rs
crates/fp-groupby/src/: lib.rs
crates/fp-index/: Cargo.toml
crates/fp-index/benches/: range_index_asof.rs  range_index_indexers.rs
crates/fp-index/examples/: bench_cat_setop.rs  bench_categorical.rs  bench_categorical_codes.rs  bench_fmt_datetime.rs  bench_idx_dt_dedup.rs  bench_idx_dt_fact.rs  bench_idx_dt_setops.rs  bench_idx_dt_sort.rs  bench_idxset.rs  bench_multiindex_dedup.rs  bench_multiindex_get_indexer.rs  bench_multiindex_setop.rs  bench_multiindex_sort.rs  bench_range_setops.rs  datetime_get_loc_bench.rs  get_indexer_bench.rs  golden_align_inner_left_i64.rs  golden_align_nonuniq_i64.rs  golden_dedup_i64.rs  golden_factorize_i64.rs  golden_get_indexer_i64.rs  golden_isin_symdiff_i64.rs  golden_union_difference_i64.rs  golden_value_counts_idx_i64.rs  has_duplicates_bench.rs  intersection_bench.rs  probe_align_modes.rs  probe_align_nonuniq.rs  probe_dedup.rs  probe_factorize_nonuniq.rs  probe_setops_isin.rs  probe_str_dedup.rs  (+5 more)
crates/fp-io/: Cargo.toml
crates/fp-join/: Cargo.toml
crates/fp-python/: Cargo.toml
crates/fp-runtime/: Cargo.toml
crates/fp-types/: Cargo.toml
crates/frankenpandas/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_column_arith.rs  fuzz_csv_parse.rs  fuzz_dataframe_eval.rs  fuzz_excel_io.rs  fuzz_fixture_parse.rs  fuzz_format_cross_round_trip.rs  fuzz_join_series.rs  fuzz_parallel_dataframe.rs  fuzz_parquet_io.rs  fuzz_scalar_cast.rs  fuzz_semantic_eq.rs  fuzz_series_add.rs  fuzz_sql_read.rs
(+4153 files in other folders)
