[workspace]
resolver = "2"
members = [
  "crates/fp-types",
  "crates/fp-columnar",
  "crates/fp-frame",
  "crates/fp-index",
  "crates/fp-expr",
  "crates/fp-groupby",
  "crates/fp-join",
  "crates/fp-io",
  "crates/fp-conformance",
  "crates/fp-runtime",
  "crates/fp-frankentui",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license-file = "LICENSE"

[workspace.dependencies]
arrow = { version = "54.3.0", default-features = false, features = ["prettyprint"] }
bumpalo = { version = "3.16.0", features = ["collections"] }
bytes = "1.10.1"
calamine = "0.26.1"
chrono = { version = "0.4.44", default-features = false, features = ["std"] }
chrono-tz = "0.10.4"
csv = "1.4.0"
parquet = { version = "54.3.0", default-features = false, features = ["arrow", "snap"] }
regex = "1.11.1"
rust_xlsxwriter = "0.94.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
