[workspace]
resolver = "2"
members = [
  "crates/fp-types",
  "crates/fp-columnar",
  "crates/fp-frame",
  "crates/fp-index",
  "crates/fp-expr",
  "crates/fp-groupby",
  "crates/fp-join",
  "crates/fp-io",
  "crates/fp-conformance",
  "crates/fp-runtime",
  "crates/fp-frankentui",
  "crates/frankenpandas",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license-file = "LICENSE"

[workspace.dependencies]
arrow = { version = "58.1.0", default-features = false, features = ["prettyprint", "ipc"] }
bumpalo = { version = "3.20.2", features = ["collections"] }
bytes = "1.11.1"
calamine = "0.34.0"
chrono = { version = "0.4.44", default-features = false, features = ["std"] }
chrono-tz = "0.10.4"
csv = "1.4.0"
parquet = { version = "58.1.0", default-features = false, features = ["arrow", "snap"] }
regex = "1.12.3"
rust_xlsxwriter = "0.94.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
thiserror = "2.0.18"
unicode-casefold = "0.2.0"
