[workspace]
resolver = "2"
members = [
  "crates/fp-types",
  "crates/fp-columnar",
  "crates/fp-frame",
  "crates/fp-index",
  "crates/fp-expr",
  "crates/fp-groupby",
  "crates/fp-join",
  "crates/fp-io",
  "crates/fp-conformance",
  "crates/fp-bench",
  "crates/fp-runtime",
  "crates/fp-frankentui",
  "crates/fp-python",
  "crates/frankenpandas",
]

[workspace.package]
edition = "2024"
version = "0.1.2"
# The LICENSE file is MIT plus a non-MIT rider on AI-assistant usage, which is
# not expressible as a standard SPDX expression. The file itself is therefore the
# license of record; no `license = "MIT"` SPDX field is set (it would understate
# the rider, and cargo flags it as redundant alongside `license-file`).
license-file = "LICENSE"
authors = ["Jeffrey Emanuel <jeff141421@gmail.com>"]
repository = "https://github.com/Dicklesworthstone/frankenpandas"
homepage = "https://github.com/Dicklesworthstone/frankenpandas"
documentation = "https://docs.rs/frankenpandas"
readme = "README.md"
keywords = ["dataframe", "pandas", "analytics", "columnar", "rust"]
categories = ["data-structures", "science"]

[workspace.dependencies]
arrow = { version = "58.3.0", default-features = false, features = ["prettyprint", "ipc"] }
bumpalo = { version = "3.20.3", features = ["collections"] }
bytes = "1.11.1"
calamine = "0.35.0"
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
chrono-tz = "0.10.4"
csv = "1.4.0"
dta = "0.6.0"
fast-float2 = "0.2.3"
hdf5 = { package = "hdf5-metno", version = "0.12.4" }
parquet = { version = "58.3.0", default-features = false, features = ["arrow", "snap"] }
mysql = "28.0"
mimalloc = "0.1"
pyo3 = { version = "0.28", features = ["extension-module"] }
quick-xml = "0.40.1"
regex = "1.12.3"
rust_xlsxwriter = "0.95.0"
rusqlite = { version = "0.40.1", features = ["bundled", "column_decltype"] }
ryu = "1.0.23"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-pickle = "1.2.0"
serde_json = { version = "1.0.150", features = ["preserve_order"] }
thiserror = "2.0.18"
# tracing: optional observability layer per br-frankenpandas-7gd4.
# Downstream crates add `tracing = { workspace = true, optional = true }`
# and gate it behind their own `tracing` feature so users who don't opt
# in pay no dependency cost.
tracing = { version = "0.1.41", default-features = false }
ucd = "0.1.1"
unicode-casefold = "0.2.0"
unicode-normalization = "0.1.25"

[profile.release-perf]
inherits = "release"
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
strip = false
opt-level = 3
