[package]
name = "fp-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
fp-conformance = { path = "../crates/fp-conformance" }
libfuzzer-sys = "0.4.10"

[[bin]]
name = "fuzz_fixture_parse"
path = "fuzz_targets/fuzz_fixture_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_json_io"
path = "fuzz_targets/fuzz_json_io.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_csv_parse"
path = "fuzz_targets/fuzz_csv_parse.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
