[package]
name = "fp-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
fp-conformance = { path = "../crates/fp-conformance" }
libfuzzer-sys = "0.4.10"

[[bin]]
name = "fuzz_fixture_parse"
path = "fuzz_targets/fuzz_fixture_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_json_io"
path = "fuzz_targets/fuzz_json_io.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_csv_parse"
path = "fuzz_targets/fuzz_csv_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_excel_io"
path = "fuzz_targets/fuzz_excel_io.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_common_dtype"
path = "fuzz_targets/fuzz_common_dtype.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_scalar_cast"
path = "fuzz_targets/fuzz_scalar_cast.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_index_align"
path = "fuzz_targets/fuzz_index_align.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_series_add"
path = "fuzz_targets/fuzz_series_add.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_join_series"
path = "fuzz_targets/fuzz_join_series.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_column_arith"
path = "fuzz_targets/fuzz_column_arith.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_groupby_sum"
path = "fuzz_targets/fuzz_groupby_sum.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
