[package]
name = "fp-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
fp-conformance = { path = "../crates/fp-conformance" }
libfuzzer-sys = "0.4.12"

[[bin]]
name = "fuzz_fixture_parse"
path = "fuzz_targets/fuzz_fixture_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_json_io"
path = "fuzz_targets/fuzz_json_io.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_csv_parse"
path = "fuzz_targets/fuzz_csv_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_excel_io"
path = "fuzz_targets/fuzz_excel_io.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_feather_io"
path = "fuzz_targets/fuzz_feather_io.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ipc_stream_io"
path = "fuzz_targets/fuzz_ipc_stream_io.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_format_cross_round_trip"
path = "fuzz_targets/fuzz_format_cross_round_trip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_dataframe_eval"
path = "fuzz_targets/fuzz_dataframe_eval.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_semantic_eq"
path = "fuzz_targets/fuzz_semantic_eq.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_parquet_io"
path = "fuzz_targets/fuzz_parquet_io.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_common_dtype"
path = "fuzz_targets/fuzz_common_dtype.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_scalar_cast"
path = "fuzz_targets/fuzz_scalar_cast.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_index_align"
path = "fuzz_targets/fuzz_index_align.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_series_add"
path = "fuzz_targets/fuzz_series_add.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_join_series"
path = "fuzz_targets/fuzz_join_series.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_column_arith"
path = "fuzz_targets/fuzz_column_arith.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_groupby_sum"
path = "fuzz_targets/fuzz_groupby_sum.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
