[package]
name = "fp-columnar"
description = "Columnar storage primitives (Column, ValidityMask) for pandas-parity dataframes — the storage layer behind fp-frame."
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fp-types = { path = "../fp-types" }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
