[package]
name = "fp-conformance"
description = "Differential conformance harness for frankenpandas against a live pandas oracle — packet fixtures + fuzz seed tests + live-oracle parity gates."
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
asupersync = ["fp-runtime/asupersync"]

[dependencies]
chrono = { workspace = true }
fp-columnar = { path = "../fp-columnar" }
fp-expr = { path = "../fp-expr" }
fp-frame = { path = "../fp-frame" }
fp-groupby = { path = "../fp-groupby" }
fp-index = { path = "../fp-index" }
fp-io = { path = "../fp-io" }
fp-join = { path = "../fp-join" }
fp-runtime = { path = "../fp-runtime" }
fp-types = { path = "../fp-types" }
raptorq = { version = "2.0.1", features = ["serde_support"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
sha2 = "0.11.0"
thiserror = { workspace = true }

[dev-dependencies]
fp-io = { path = "../fp-io" }
fp-join = { path = "../fp-join" }
proptest = "1.11.0"
rusqlite = { workspace = true }
tempfile = "3.27.0"
