[package]
name = "fp-expr"
description = "Expression evaluation / query parser for fp-frame DataFrames — pandas df.eval / df.query parity."
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fp-columnar = { path = "../fp-columnar" }
fp-frame = { path = "../fp-frame" }
fp-index = { path = "../fp-index" }
fp-runtime = { path = "../fp-runtime" }
fp-types = { path = "../fp-types" }
serde = { workspace = true }
thiserror = { workspace = true }
