[package]
name = "fp-expr"
description = "Expression evaluation / query parser for fp-frame DataFrames — pandas df.eval / df.query parity."
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fp-columnar = { path = "../fp-columnar", version = "0.1.1" }
fp-frame = { path = "../fp-frame", version = "0.1.1" }
fp-index = { path = "../fp-index", version = "0.1.1" }
fp-runtime = { path = "../fp-runtime", version = "0.1.1" }
fp-types = { path = "../fp-types", version = "0.1.1" }
serde = { workspace = true }
thiserror = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
