[package]
name = "fp-frame"
description = "DataFrame and Series with pandas-API parity, AACE index alignment, and GroupBy / Rolling / Resample integration."
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
fp-columnar = { path = "../fp-columnar" }
fp-index = { path = "../fp-index" }
fp-runtime = { path = "../fp-runtime" }
fp-types = { path = "../fp-types" }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
unicode-casefold = { workspace = true }
