[package]
name = "fp-frame"
description = "DataFrame and Series with pandas-API parity, AACE index alignment, and GroupBy / Rolling / Resample integration."
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# Emit `tracing` spans/events for hot-path operations (groupby, rolling,
# resample, IO). Off by default so users who don't attach a tracing
# subscriber pay no dependency cost. Per br-frankenpandas-7gd4.
tracing = ["dep:tracing"]

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
fp-columnar = { path = "../fp-columnar" }
fp-index = { path = "../fp-index" }
fp-runtime = { path = "../fp-runtime" }
fp-types = { path = "../fp-types" }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
unicode-casefold = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
