[package]
name = "fp-frankentui"
description = "FrankenTUI terminal interface for interactive fp-frame / frankenpandas workflows."
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fp-conformance = { path = "../fp-conformance", version = "0.1.1" }
fp-runtime = { path = "../fp-runtime", version = "0.1.1" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
proptest = "1.11.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
