[package]
name = "fp-groupby"
description = "GroupBy engine for fp-frame with dense-key / arena-backed / hash-map execution paths."
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bumpalo = { workspace = true }
fp-columnar = { path = "../fp-columnar", version = "0.1.0" }
fp-frame = { path = "../fp-frame", version = "0.1.0" }
fp-index = { path = "../fp-index", version = "0.1.0" }
fp-runtime = { path = "../fp-runtime", version = "0.1.0" }
fp-types = { path = "../fp-types", version = "0.1.0" }
rustc-hash = "2"
thiserror = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
