[package]
name = "fp-index"
description = "Flat and multi-level row index types (Index, MultiIndex) for pandas-parity dataframes."
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fp-types = { path = "../fp-types" }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
