[package]
name = "fp-index"
description = "Flat and multi-level row index types (Index, MultiIndex) for pandas-parity dataframes."
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fp-types = { path = "../fp-types", version = "0.1.2" }
chrono = { workspace = true }
rustc-hash = "2"
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "range_index_asof"
harness = false

[[bench]]
name = "range_index_indexers"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
