[package]
name = "fp-io"
description = "IO layer for frankenpandas: CSV, JSON, JSONL, Parquet, Excel, Feather, Arrow IPC, SQL (SqlConnection with SQLite default backend)."
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono = { workspace = true }
arrow = { workspace = true }
bytes = { workspace = true }
calamine = { workspace = true }
csv = { workspace = true }
fp-columnar = { path = "../fp-columnar" }
fp-frame = { path = "../fp-frame" }
fp-index = { path = "../fp-index" }
fp-types = { path = "../fp-types" }
parquet = { workspace = true }
rust_xlsxwriter = { workspace = true }
rusqlite = { workspace = true, optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["sql-sqlite"]
sql-sqlite = ["dep:rusqlite"]
sql-postgresql = []
sql-mysql = []
