[package]
name = "fp-io"
description = "IO layer for frankenpandas: CSV, JSON, JSONL, Parquet, ORC, HDF5, Excel, Feather, Arrow IPC, Pickle, Stata, SQL (SqlConnection with SQLite default backend)."
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono = { workspace = true }
arrow = { workspace = true }
bytes = { workspace = true }
calamine = { workspace = true }
csv = { workspace = true }
dta = { workspace = true }
fast-float2 = { workspace = true }
fp-columnar = { path = "../fp-columnar" }
fp-frame = { path = "../fp-frame" }
fp-index = { path = "../fp-index" }
fp-types = { path = "../fp-types" }
hdf5 = { workspace = true, optional = true }
orc-rust = { workspace = true }
parquet = { workspace = true }
quick-xml = { workspace = true }
rust_xlsxwriter = { workspace = true }
rusqlite = { workspace = true, optional = true }
postgres = { workspace = true, optional = true }
mysql = { workspace = true, optional = true }
scraper = { workspace = true }
serde-pickle = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

# hdf5 is OPT-IN: hdf5-metno-sys requires a system HDF5 library/headers at
# build time, which is absent on CI runners and most end-user machines and
# would break a plain `cargo build` / `cargo install`. Users who need native
# HDF5 IO enable the `hdf5` feature explicitly (and provide a system HDF5).
# (br-frankenpandas / issue #9)
[features]
default = ["sql-sqlite"]
hdf5 = ["dep:hdf5"]
sql-sqlite = ["dep:rusqlite"]
sql-postgresql = ["dep:postgres"]
sql-mysql = ["dep:mysql"]
