[package]
name = "fp-join"
description = "Merge and join engine (AG-05 leapfrog triejoin) for fp-frame DataFrames — inner / left / right / outer joins with index alignment."
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bumpalo = { workspace = true }
fp-columnar = { path = "../fp-columnar" }
fp-frame = { path = "../fp-frame" }
fp-index = { path = "../fp-index" }
fp-types = { path = "../fp-types" }
thiserror = { workspace = true }
