[package]
name = "fp-join"
description = "Merge and join engine (AG-05 leapfrog triejoin) for fp-frame DataFrames — inner / left / right / outer joins with index alignment."
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bumpalo = { workspace = true }
fp-columnar = { path = "../fp-columnar", version = "0.1.2" }
fp-frame = { path = "../fp-frame", version = "0.1.2" }
fp-index = { path = "../fp-index", version = "0.1.2" }
fp-types = { path = "../fp-types", version = "0.1.2" }
rustc-hash = "2"
smallvec = "1.15"
thiserror = { workspace = true }

[[bin]]
name = "fp-join"
path = "src/bin.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
