[package]
name = "fp-python"
description = "PyO3 Python bindings for FrankenPandas — import frankenpandas from Python"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "frankenpandas"
crate-type = ["cdylib"]

[dependencies]
fp-columnar = { path = "../fp-columnar" }
fp-frame = { path = "../fp-frame" }
fp-index = { path = "../fp-index" }
fp-io = { path = "../fp-io", default-features = false, features = ["sql-sqlite"] }
fp-types = { path = "../fp-types" }
pyo3 = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
