[package]
name = "fp-python"
description = "PyO3 Python bindings for FrankenPandas — import frankenpandas from Python"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "frankenpandas"
crate-type = ["cdylib"]

[dependencies]
fp-columnar = { path = "../fp-columnar", version = "0.1.0" }
fp-frame = { path = "../fp-frame", version = "0.1.0" }
fp-index = { path = "../fp-index", version = "0.1.0" }
fp-join = { path = "../fp-join", version = "0.1.0" }
fp-io = { path = "../fp-io", version = "0.1.0", default-features = false, features = ["sql-sqlite"] }
fp-types = { path = "../fp-types", version = "0.1.0" }
mimalloc = { workspace = true }
pyo3 = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
