[package]
name = "fp-runtime"
description = "Runtime policies, evidence ledgers, and asupersync interop for the frankenpandas execution layer."
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
asupersync = ["dep:asupersync"]

[dependencies]
asupersync = { version = "0.3.1", optional = true, default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
