[package]
name = "fp-runtime"
description = "Runtime policies, evidence ledgers, and asupersync interop for the frankenpandas execution layer."
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
asupersync = ["dep:asupersync"]

[dependencies]
asupersync = { version = "0.3.2", optional = true, default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11.0"
thiserror = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
