[package]
name = "frankenpandas"
description = "Clean-room Rust reimplementation of the pandas API — DataFrame, Series, GroupBy, Rolling, Resample, MultiIndex, 7 IO formats. Zero unsafe."
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fp-columnar = { path = "../fp-columnar" }
fp-expr = { path = "../fp-expr" }
fp-frame = { path = "../fp-frame" }
fp-index = { path = "../fp-index" }
fp-io = { path = "../fp-io" }
fp-join = { path = "../fp-join" }
fp-runtime = { path = "../fp-runtime" }
fp-types = { path = "../fp-types" }
