[package]
name = "frankenpandas"
description = "Clean-room Rust reimplementation of the pandas API — DataFrame, Series, GroupBy, Rolling, Resample, MultiIndex, 8 IO formats. Zero unsafe."
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fp-columnar = { path = "../fp-columnar" }
fp-expr = { path = "../fp-expr" }
fp-frame = { path = "../fp-frame" }
fp-groupby = { path = "../fp-groupby" }
fp-index = { path = "../fp-index" }
fp-io = { path = "../fp-io", default-features = false }
fp-join = { path = "../fp-join" }
fp-runtime = { path = "../fp-runtime" }
fp-types = { path = "../fp-types" }

# Re-exported under the sql-sqlite feature so README Quick Start can call
# rusqlite::Connection::open_in_memory()? without users adding rusqlite as
# a direct dep. Matches fp-io's optional gating (br-frankenpandas-r34z9 / fd90.130).
rusqlite = { workspace = true, optional = true }

# Per br-frankenpandas-l6nr (fd90.58) and br-frankenpandas-ii9u
# (fd90.59): forward inner-crate feature flags so umbrella users
# can opt in/out without depending on inner crates directly.
#
# - SQL: forward fp-io's backend selection. Default is sql-sqlite.
#   sql-postgresql / sql-mysql are placeholders today (fp-io exposes
#   them but doesn't bind concrete backends yet — that's fd90 Phase 2).
# - HDF5: forward fp-io's native HDF5 integration. Default is on for
#   the umbrella crate to preserve the advertised IO surface; downstream
#   crates can disable default features when they only need non-HDF5 IO.
# - tracing: forward fp-frame's optional `tracing` spans on hot
#   paths (groupby, rolling, resample, IO). Off by default so users
#   without a tracing subscriber pay no dependency cost.
# - asupersync: forward fp-runtime's optional asupersync runtime
#   integration. Off by default.
[features]
default = ["sql-sqlite", "hdf5"]
hdf5 = ["fp-io/hdf5"]
sql-sqlite = ["fp-io/sql-sqlite", "dep:rusqlite"]
sql-postgresql = ["fp-io/sql-postgresql"]
sql-mysql = ["fp-io/sql-mysql"]
tracing = ["fp-frame/tracing"]
asupersync = ["fp-runtime/asupersync"]

[dev-dependencies]
# fd90.196: serde_json round-trip integration test for the README's
# "Serialization and Interoperability" claim.
serde_json = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
